--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+../node_modules
+.env.local
 dist
 dist-ssr
 *.local
@@ -23,3 +24,5 @@ dist-ssr
 *.sln
 *.sw?
 .vscode
+node_modules
+fly.toml
