--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinia": "^2.1.7",
     "pocketbase": "^0.21.1",
     "primevue": "^3.50.0",
     "vue": "^3.4.21",
