--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "pinia": "^2.1.7",
     "pocketbase": "^0.21.1",
     "primevue": "^3.50.0",
+    "sass": "^1.74.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
