--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.1",
+    "@vee-validate/zod": "^4.12.6",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
@@ -25,6 +26,7 @@
     "typescript": "^5.2.2",
     "unplugin-vue-components": "^0.26.0",
     "unplugin-vue-router": "^0.8.5",
+    "vee-validate": "^4.12.6",
     "vite": "^5.2.0",
     "vue-tsc": "^2.0.6"
   }
