--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.1",
-    "@vee-validate/zod": "^4.12.6",
+    "@vee-validate/yup": "^4.12.6",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
